--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,8 @@
+[build]
+  command = "npm run build"
+  publish = "dist"
+
 [[redirects]]
   from = "/*"
   to = "/"
   status = 200 
-
-mmit-webapp-vite
