--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "placeholder": "git remote add dev https://github.com/mentormeintech/mmit-webapp-vite.git",
+    "main": "git push -u origin main",
+    "mmit:dev": "git push -u dev main"
   },
   "dependencies": {
     "aos": "^2.3.4",
