--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-password-checklist": "^1.5.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
+    "react-simple-typewriter": "^5.0.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "react-use": "^17.4.0",
