--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "redux-persist": "^6.0.0",
     "reduxjs-toolkit-persist": "^7.2.1",
     "styled-components": "^6.1.8",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "typeface-inter": "^3.18.1",
     "typeface-nunito": "^1.1.13"
   },
