--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@mui/material": "^5.15.2",
     "aos": "^2.3.4",
     "axios": "^1.6.2",
+    "classnames": "^2.5.1",
+    "date-fns": "^3.3.1",
     "framer-motion": "^10.16.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
