--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "classnames": "^2.5.1",
     "date-fns": "^3.3.1",
     "framer-motion": "^10.16.5",
+    "globalize": "^1.7.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.7",
+    "react-big-scheduler": "^0.2.7",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
