--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.2",
     "@mui/x-date-pickers": "^6.19.6",
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/supabase-js": "^2.45.4",
     "@syncfusion/ej2-react-schedule": "^27.1.50",
     "aos": "^2.3.4",
     "axios": "^1.6.2",
