--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.2",
     "@mui/x-date-pickers": "^6.19.6",
+    "@reduxjs/toolkit": "^2.5.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.45.4",
     "@syncfusion/ej2-react-schedule": "^27.1.50",
@@ -31,6 +32,7 @@
     "globalize": "^1.7.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
@@ -42,6 +44,7 @@
     "react-toastify": "^9.1.3",
     "react-use": "^17.4.0",
     "reactstrap": "^9.2.1",
+    "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "reduxjs-toolkit-persist": "^7.2.1",
     "styled-components": "^6.1.8",
