--- a/package.json
+++ b/package.json
@@ -29,14 +29,16 @@
     "classnames": "^2.5.1",
     "date-fns": "^3.3.1",
     "firebase": "^11.1.0",
-    "framer-motion": "^10.16.5",
+    "framer-motion": "^10.18.0",
     "globalize": "^1.7.0",
+    "lucide-react": "^0.474.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-intersection-observer": "^9.15.0",
     "react-password-checklist": "^1.5.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
