--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.10.0",
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.2",
     "@mui/x-date-pickers": "^6.19.6",
@@ -51,7 +52,8 @@
     "styled-components": "^6.1.8",
     "tailwind-scrollbar-hide": "^1.1.7",
     "typeface-inter": "^3.18.1",
-    "typeface-nunito": "^1.1.13"
+    "typeface-nunito": "^1.1.13",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
